Fix image paths for Streamlit deployment + minor cleanup

--- a/notebooks/pun_prediction.ipynb
+++ b/notebooks/pun_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8e391835",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "[5 rows x 61 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "5ecc667e",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "964aaebe",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "682fb254",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "a0214717",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c0e38980",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
        "[5 rows x 66 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "b2d81581",
    "metadata": {},
    "outputs": [
@@ -818,7 +818,7 @@
     "    plt.close()\n",
     "\n",
     "    # ✅ Percorso relativo per essere compatibile con Streamlit Cloud\n",
-    "    return os.path.relpath(image_path, start=os.getcwd())\n",
+    "    return os.path.join(\"images\", filename).replace(\"\\\\\", \"/\")\n",
     "\n",
     "\n",
     "# === B. True vs Predicted plot for linear models (Lasso, Ridge, SVR) ===\n",
@@ -855,7 +855,7 @@
     "    plt.close()\n",
     "\n",
     "    # ✅ Percorso relativo per salvataggio nel database o visualizzazione\n",
-    "    return os.path.relpath(image_path, start=os.getcwd())\n",
+    "    return os.path.join(\"images\", filename).replace(\"\\\\\", \"/\")\n",
     "\n",
     "\n",
     "# === Model evaluation ===\n",
@@ -1115,7 +1115,7 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 30 candidates, totalling 90 fits\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.001842 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.001498 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 12414\n",
       "[LightGBM] [Info] Number of data points in the train set: 1030, number of used features: 64\n",
